--- a/website/mainSearchPage/index.html
+++ b/website/mainSearchPage/index.html
@@ -51,25 +51,58 @@
       </div>
     </nav>
 
+    <!-- Carousel -->
+    <div id="schoolCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#schoolCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#schoolCarousel" data-slide-to="1"></li>
+        <li data-target="#schoolCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="image/Northeastern_University.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Northeastern University<br>Boston, MA</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#schoolCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#schoolCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+
     <div class="site-wrapper">
        <div class="site-wrapper-inner">
-
           <div class="inner cover">
             <h1 class="cover-heading">Tour a College Like its Current Student &gt;3&lt;!</h1>
-
-              <!-- Search Section -->
-            <!--<div id="navbar" class="navbar-collapse collapse">-->
-              <!--<form class="navbar-form navbar-right">-->
-                <!--<div class="form-group">-->
-                  <!--<input type="text" placeholder="Email" class="form-control">-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                  <!--<input type="password" placeholder="Password" class="form-control">-->
-                <!--</div>-->
-                <!--<button type="submit" class="btn btn-success">Sign in</button>-->
-              <!--</form>-->
-            <!--</div>&lt;!&ndash;/.navbar-collapse &ndash;&gt;-->
-
               <div class="search">
                   <div class="container">
                       <div class="row">
@@ -125,28 +158,21 @@
                   </div>
               </div>
 
-
-
-
-
-
               <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Terms&Conditions     <a href="http://getbootstrap.com">YCTour</a>, by <a
-                      href="">@mdo
-              </a>.</p>
-            </div>
-          </div>
-
         </div>
-
       </div>
+    </div>
 
+    <div class="container">
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p class="pull-left">&copy; 2017 YC Tour, Inc. &middot; <a href="#">Privacy</a>
+                &middot; <a href="#">Terms</a></p>
+      </footer>
     </div>
 
     <!-- Bootstrap core JavaScript
