--- a/website/mainSearchPage/index.html
+++ b/website/mainSearchPage/index.html
@@ -99,71 +99,57 @@
       </a>
     </div><!-- /.carousel -->
 
-    <div class="site-wrapper">
-       <div class="site-wrapper-inner">
-          <div class="inner cover">
-            <h1 class="cover-heading">Tour a College Like its Current Student &gt;3&lt;!</h1>
-              <div class="search">
-                  <div class="container">
-                      <div class="row">
-                          <div class="col-md-10 col-md-offset-1">
-                              <div class="form-section">
-                                  <div class="row">
-                                      <form role="form">
-                                          <div class="col-md-4">
-                                              <div class="form-group">
-                                                  <label class="sr-only" for="location">Location </label><input type="text" class="form-control" id="location" placeholder="Where would you like to travel?">
-
-                                                  <label class="sr-only" for="checkin">Check in</label>
-                                                      <input type="text" class="form-control"
-                                                             id="checkin" placeholder="Check in">
-                                                      <span class="input-group-addon">
-                                                          <i class="glyphicon glyphicon-calendar"></i></span>
-
-                                                  <label class="sr-only" for="checkout">Check out</label>
-                                                      <input type="text" class="form-control"
-                                                             id="checkout" placeholder="Check out">
-                                                      <span class="input-group-addon">
-                                                      <i class="glyphicon glyphicon-calendar"></i></span>
-
-
-                                                  <label class="sr-only" for="guest">Guest</label>
-                                                  <select id="guest" name="guest" class="form-control">
-                                                      <option value="1">1 Guest</option>
-                                                      <option value="2">2 Guests</option>
-                                                      <option value="3">3 Guests</option>
-                                                      <option value="4">4 Guests</option>
-                                                      <option value="5">5 Guests</option>
-                                                      <option value="6">6 Guests</option>
-                                                      <option value="7">7 Guests</option>
-                                                      <option value="8">8 Guests</option>
-                                                      <option value="9">9 Guests</option>
-                                                      <option value="10">10 Guests</option>
-                                                      <option value="11">11 Guests</option>
-                                                      <option value="12">12 Guests</option>
-                                                      <option value="13">13 Guests</option>
-                                                      <option value="14">14 Guests</option>
-                                                      <option value="15">15 Guests</option>
-                                                      <option value="16">16+ Guests</option>
-                                                  </select>
-
-                                              <button type="submit" class="btn btn-default btn-primary">Search</button>
-                                                  </div>
-                                              </div>
-                                      </form>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+    <div class="container search-bar">
+      <h1 class="cover-heading">Tour a College Like its Current Student &gt;3&lt;!</h1>
+      <form role="search" class="form-section">
+        <div class="row">
+          <div class="form-group">
+            <div class="col-md-3">
+              <label class="sr-only" for="location">Location </label>
+              <input type="text" class="form-control" id="location"
+                     placeholder="Where would you like to travel?">
+            </div>
+            <div class="col-md-3">
+              <label class="sr-only" for="checkin">Check in</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="checkin" placeholder="Check in">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               </div>
-
-              <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+            </div>
+            <div class="col-md-3">
+              <label class="sr-only" for="checkout">Check out</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="checkout" placeholder="Check out">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <label class="sr-only" for="guest">Guest</label>
+              <select id="guest" name="guest" class="form-control">
+                <option value="1">1 Guest</option>
+                <option value="2">2 Guests</option>
+                <option value="3">3 Guests</option>
+                <option value="4">4 Guests</option>
+                <option value="5">5 Guests</option>
+                <option value="6">6 Guests</option>
+                <option value="7">7 Guests</option>
+                <option value="8">8 Guests</option>
+                <option value="9">9 Guests</option>
+                <option value="10">10 Guests</option>
+                <option value="11">11 Guests</option>
+                <option value="12">12 Guests</option>
+                <option value="13">13 Guests</option>
+                <option value="14">14 Guests</option>
+                <option value="15">15 Guests</option>
+                <option value="16">16+ Guests</option>
+              </select>
+            </div>
+            <div class="col-md-1">
+              <button type="submit" class="btn btn-default btn-primary">Search</button>
+            </div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
 
     <div class="container">
