MainPage: Added recommanded students and recommanded place section
[ Testing: Manual Test on Chrome/Firefox ]

--- a/website/mainSearchPage/index.html
+++ b/website/mainSearchPage/index.html
@@ -156,6 +156,84 @@
     </div>
 
     <div class="container">
+      <!-- Three columns of text below the search bar -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="image/default_profile.jpg" alt="Default profile image"
+               width="140" height="140">
+          <h4><b>Last Name, First Name</b></h4>
+          <p>Short Introduction</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="image/default_profile.jpg" alt="Default profile image"
+               width="140" height="140">
+          <h4><b>Last Name, First Name</b></h4>
+          <p>Short Introduction</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="image/default_profile.jpg" alt="Default profile image"
+               width="140" height="140">
+          <h4><b>Last Name, First Name</b></h4>
+          <p>Short Introduction</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            First featurette heading. <br>
+            <span class="text-muted">Northeastern University</span>
+          </h2>
+          <p class="lead">Be Creative and Find Your Own Passion</p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-responsive center-block" src="image/NEU.jpg" alt="First featured"
+               width="500", height="500">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">
+              Oh yeah, it's that good.<br>
+              <span class="text-muted">MIT</span>
+          </h2>
+          <p class="lead">Explore and Get Inspired</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="img-responsive center-block" src="image/MIT-dome-at-night.jpg"
+               alt="Second featured" width="500" height="500">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            And lastly, this one. <br>
+            <span class="text-muted">Harvard University</span>
+          </h2>
+          <p class="lead">Feel the History Here and Draw Your Own Story</p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-responsive center-block" src="image/Harvard-University.jpg"
+               alt="Third featured" width="500" height="500">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+      <!-- /END THE FEATURETTES -->
+
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
