--- a/website/mainSearchPage/index.html
+++ b/website/mainSearchPage/index.html
@@ -44,7 +44,7 @@
           </form>
           <div class="nav-start">
             <a href="#">Start Your Tour!</a>
-            <a href="#">Login/Register</a>
+            <a href="../../website/mainSearchPage/signin.html">Login/Register</a>
             <a href="#">Contact</a>
           </div>
         </div><!--/.nav-collapse -->
@@ -63,33 +63,33 @@
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img class="first-slide" src="image/NEU.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Northeastern University</h1>
-                <h4>Be Creative and Find Your Own Passion</h4>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Northeastern University</h1>
+                    <h4>Be Creative and Find Your Own Passion</h4>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+                </div>
             </div>
-          </div>
         </div>
         <div class="item">
           <img class="second-slide" src="image/MIT-dome-at-night.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>MIT</h1>
-              <h4>Explore and Get Inspired</h4>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>MIT</h1>
+                    <h4>Explore and Get Inspired</h4>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+                </div>
             </div>
-          </div>
         </div>
         <div class="item">
           <img class="third-slide" src="image/Harvard-University.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Harvard</h1>
-              <h4>Feel the History Here and Draw Your Own Story</h4>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Harvard</h1>
+                    <h4>Feel the History Here and Draw Your Own Story</h4>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Book A Trip</a></p>
+                </div>
             </div>
-          </div>
         </div>
       </div>
       <a class="left carousel-control" href="#schoolCarousel" role="button" data-slide="prev">
