Tourist Registraion Page
* Reformat the page a bit
* Added more fields
* Made it to be tourist centric (easily to sign up with only basic information required)

[ Testing: Manual Testing on Chrome ]

--- a/website/mainSearchPage/login.html
+++ b/website/mainSearchPage/login.html
@@ -19,7 +19,7 @@
           crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
   </head>
 
   <body>
@@ -40,7 +40,9 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
       </form>
       <div class="register">
-        <a href="register.html">Register Here!</a>
+        Registration:
+        <a href="tour_guide_registeration.html">Tour Guide</a> /
+        <a href="tourist_registeration.html">Tourist</a>
       </div>
 	</div> <!-- /container -->
   </body>
