--- a/website/mainSearchPage/tourist_registeration.html
+++ b/website/mainSearchPage/tourist_registeration.html
@@ -25,16 +25,33 @@
   <body>
 	<div class="container">
       <form class="form-register">
-        <h2 class="form-register-heading">Register</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address"
-               required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
+        <h2 class="form-register-heading">Tourist Registeration</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <label for="firstName">First Name</label>
+            <input type="name" id="firstName" class="form-control" placeholder="First Name"
+                   required>
+          </div>
+          <div class="col-md-4">
+            <label for="middleName">Middle Name</label>
+            <input type="name" id="middleName" class="form-control" placeholder="Middle Name"
+                   required>
+          </div>
+          <div class="col-md-4">
+            <label for="lastName">First Name</label>
+            <input type="name" id="lastName" class="form-control" placeholder="Last Name"
+                   required>
+          </div>
+        </div>
+        <label for="inputEmail">Email Address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email Address"
+               required>
+        <label for="inputPassword">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password"
                required>
-        <label for="confirmPassword" class="sr-only">Confirm Password</label>
-        <input type="password" id="confirmPassword" class="form-control"
-               placeholder="Confirm Password" required>
+        <label for="passwordConfirmation">Password Confirmation</label>
+        <input type="password" id="passwordConfirmation" class="form-control"
+               placeholder="Password Confirmation" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Regsiter</button>
       </form>
 	</div> <!-- /container -->
