--- a/website/mainSearchPage/tour_guide_registeration.html
+++ b/website/mainSearchPage/tour_guide_registeration.html
@@ -25,7 +25,7 @@
   <body>
 	<div class="container">
       <form class="form-register">
-        <h2 class="form-register-heading">Tourist Registeration</h2>
+        <h2 class="form-register-heading">Tour Guide Registeration</h2>
         <div class="row">
           <div class="col-md-4">
             <label for="firstName" class="required">First Name</label>
@@ -42,6 +42,11 @@
                    required>
           </div>
         </div>
+        <label for="birthday">Birthday</label>
+        <input type="date" id="birthday" class="form-control" placeholder="mm/dd/yyyy">
+        <label for="university" class="required">University</label>
+        <input type="text" id="university" class="form-control" placeholder="University"
+               required>
         <label for="inputEmail" class="required">Email Address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email Address"
                required>
@@ -54,5 +59,13 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Regsiter</button>
       </form>
 	</div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
   </body>
 </html>
